# cmake

./: .gitignore  add_custom_command-add_custom_target.cmake
Master_CMake_for_Cross-Platform_C++_Project_Building_update_06Dec2020/m7l3_Exporting_a_Package/client/: CMakeLists.txt  app.cpp
Master_CMake_for_Cross-Platform_C++_Project_Building_update_06Dec2020/m7l3_Exporting_a_Package/my_math/: CMakeLists.txt  Config.cmake.in
best_practice/: CMakeLists.txt  README.md
best_practice/dep/: CMakeLists.txt
best_practice/dep/gtest/: CMakeLists.txt
best_practice/dependencies/: CMakeLists.txt
best_practice/dependencies/ext_modules/: CMakeLists.txt
best_practice/dependencies/gtest/: CMakeLists.txt
best_practice/src/: CMakeLists.txt
best_practice_client/caclulator/: CMakeLists.txt  app.cpp
best_practice_client/computer/: CMakeLists.txt
best_practice_client/math/: CMakeLists.txt  app.cpp  build.sh
best_practice_lib/: CMakeLists.txt  build.sh
best_practice_lib/cmake/: BpHelpers.cmake
best_practice_lib/dep/: CMakeLists.txt
best_practice_lib/dep/ext_modules/: CMakeLists.txt
best_practice_lib/dep/gtest/: CMakeLists.txt
best_practice_lib/dep/json/: CMakeLists.txt
best_practice_lib/doc/: project_diag.drawio
best_practice_lib/ext/aarch64/lib/pkgconfig/: tinyxml2.pc
best_practice_lib/ext/lib/foonathan_memory/cmake/: foonathan_memory-config.cmake
best_practice_lib/ext/x86/lib/foonathan_memory/cmake/: foonathan_memory-config-buildtype.cmake
best_practice_lib/src/: CMakeLists.txt  Config.cmake.in  README.md
best_practice_lib/src/caculator/: CMakeLists.txt
best_practice_lib/src/caculator/include/caculator/: caculator.h
best_practice_lib/src/caculator/src/: caculator.cpp
best_practice_lib/src/computer/: CMakeLists.txt
best_practice_lib/src/computer/src/: computer.cpp
best_practice_lib/src/divide/: CMakeLists.txt
best_practice_lib/src/divide/include/divide/: divide.h
best_practice_lib/src/divide/src/: divide.cpp
best_practice_lib/src/multi/: CMakeLists.txt
best_practice_lib/src/multi/include/multi/: multi.h
best_practice_lib/src/multi/src/: multi.cpp
cmake/: SayYes.cmake
importing-exporting/client/: CMakeLists.txt  app.cpp
importing-exporting/my_math/: CMakeLists.txt  Config.cmake.in  README.md
importing-exporting/my_math/addition/: CMakeLists.txt
importing-exporting/my_math/addition/src/: addition.cpp
importing-exporting/my_math/division/: CMakeLists.txt
importing-exporting/my_math/division/src/: division.cpp
interface_problem/: A.cpp  A.h  B.cpp  B.h  Base.h  CMakeLists.txt  README.md  [CMake] Difference between PRIVATE and PUBLIC with target_link_libraries.html  app.cpp
